--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Foldit:wght@600&family=IBM+Plex+Mono&family=Monoton&family=Nunito&family=Open+Sans&display=swap');
 body {
     margin: 0;
-    background-color: #365097;
+    background-color: #5a72b4;
     font-family: 'Nunito';
 }
 
